--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,9 +3,9 @@
 @tailwind utilities;
 
 :root {
-    @apply text-gray-200;
+    @apply text-white;
 }
 
 h4 {
-    @apply text-4xl font-bold;
+    @apply text-4xl md:text-6xl font-bold;
 }
